chore: add example invitateion template id

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ EMAIL_FROM="anitha@agilenautics.com"
 # EMAIL TEMPLATES
 FIREBASE_VERIFY_TEMPLATE_ID="d-c2545ad25c3848b09a0de11a6974c5ff"
 PASSWORD_RESET_TEMPLATE_ID="d-607fdacd1caf4db480700858142c93d6"
+INVITE_USER_TEMPLATE_ID="d-51ff193c2afb460db20adb1c7b924055"
 
 # API KEY
 SENDGRID_KEY="KEY"
