--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "npx tsc",
+    "start:prod": "node dist/index.js",
+    "start:dev": "nodemon src/index.ts"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "body-parser": "^1.20.2",
@@ -14,15 +19,15 @@
     "firebase-admin": "^12.0.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.1",
-    "routing-controllers": "^0.10.4",
-    "typedi": "^0.10.0"
+    "routing-controllers": "^0.10.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.4"
   }
 }
