--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "rootDir": "./src",
     "experimentalDecorators": true
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "./api/*.ts",
+    "src/**/*.ts"],
   "exclude": ["node_modules"]
 }
