--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "experimentalDecorators": true
   },
   "include": [
-    "./api/*.ts",
-    "src/**/*.ts"],
+    "src/**/*.ts",
+    "api/**/*.ts" 
+  ],
   "exclude": ["node_modules"]
 }
