--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc",
+    
+    "build": "tsc -p tsconfig.json && other-build-steps",
     "start:prod": "NODE_ENV=prod node dist/index.js",
     "start:dev": "NODE_ENV=dev nodemon src/index.ts"
   },
