Revert "added vercel.json file"
This reverts commit 90248a2822b873ef331a1de861636b2bf0d039a2.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,6 @@
     "rootDir": "./src",
     "experimentalDecorators": true
   },
-  "include": [
-    "src/**/*.ts",
-    "api/**/*.ts" 
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
