--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,9 +18,6 @@
     "rootDir": "./src",
     "experimentalDecorators": true
   },
-  "include": [
-    "src/**/*.ts",
-    "api/**/*.ts" 
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
