feat: add header config in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,12 @@
       }
     }
   ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+    }
+  ],
   "env": {
     "IS_VERCEL": "true"
   }
