--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,9 @@
     {
       "src": "/(.*)",
       "dest": "dist/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "methods": ["POST", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "PLACE_HOLDER_FOR_PASSING_LOGIC_TO_CORS_MIDDLEWARE"
+        "Access-Control-Allow-Origin": "*"
       }
     }
   ],
