--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.1",
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4"
