--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.1",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "^0.10.4",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
