--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rimraf dist tsconfig.tsbuildinfo && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
-    "start:prod": "NODE_ENV=prod node dist/index.js",
-    "start:dev": "NODE_ENV=dev nodemon src/index.ts"
+    "start:dev": "cross-env NODE_ENV=dev nodemon src/index.ts",
+    "start:prod": "cross-env NODE_ENV=prod node dist/index.js"
   },
   "pre-commit": [
     "ts.check",
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
+    "twilio": "^5.8.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^5.0.7",
