--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rimraf dist tsconfig.tsbuildinfo && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
-    "start:dev": "cross-env NODE_ENV=dev nodemon src/index.ts",
-    "start:prod": "cross-env NODE_ENV=prod node dist/index.js"
+    "start:prod": "NODE_ENV=prod node dist/index.js",
+    "start:dev": "NODE_ENV=dev nodemon src/index.ts"
   },
   "pre-commit": [
     "ts.check",
